[package]
name = "generative_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "2.33.3"
rand = "0.8.4"
image = "0.23.14"
imageproc = {version = "0.22.0", default-features = false}
